# pokescreader-sv

./: .gitignore  DEVELOPER-GUIDE.md  LICENSE  README-dist.md  README.md  pokescreader-sv.py  pyproject.toml
.github/workflows/: build-and-test.yml
licenses/python/: LICENSE
licenses/tessdata_best/: LICENSE.txt
licenses/tessdata_fast/: LICENSE.txt
pkscrd/: __init__.py  main.py
pkscrd/app/: gui.py
pkscrd/app/configuration/: __init__.py  app.py  model.py  service.py
pkscrd/app/configuration/controller/: __init__.py  dialog.py  inputs.py  messages.py
pkscrd/app/reader/: __init__.py  agent.py  app.py  error.py
pkscrd/app/reader/controller/: gui.py  image.py
pkscrd/app/reader/factory/: controller.py
pkscrd/app/reader/factory/core/: ocr.py  screen.py  (+1 more)
pkscrd/app/resources/: pokescreader.icns
pkscrd/app/settings/: error.py  model.py  service.py
pkscrd/core/cursor/: model.py  service.py
pkscrd/core/hp/: model.py  service.py
pkscrd/core/log/: model.py  service.py
pkscrd/core/move/: model.py  service.py
pkscrd/core/notification/: model.py
pkscrd/core/notification/infra/: audio.py  bouyomichan.py  voicevox.py
pkscrd/core/notification/service/: __init__.py  messenger.py  notifier.py  talker.py
pkscrd/core/ocr/: error.py  model.py
pkscrd/core/ocr/service/: __init__.py  engine.py
pkscrd/core/pokemon/: model.py  repos.py  service.py
pkscrd/core/scene/: model.py  service.py
pkscrd/core/screen/infra/: device.py  obs.py
pkscrd/core/screen/service/: __init__.py  fetcher.py
pkscrd/core/selection/: service.py
pkscrd/core/terastal/: model.py  repos.py
pkscrd/core/terastal/resources/: terastal-omen.npz
pkscrd/core/terastal/service/: __init__.py  omen.py  terastal.py  teratype.py
pkscrd/core/tolerance/: model.py  service.py
pkscrd/usecase/: ally.py  cursor.py  hp.py  log.py  move.py  scene.py  screenshot.py  selection.py  team.py  terastal.py
tests/: conftest.py
tests/app/: settings_test.py
tests/core/: hp_test.py  log_test.py  pokemon_test.py  scene_test.py  selection_test.py  tolerance_test.py
tests/core/notification/: messenger_test.py
tests/core/notification/infra/: audio_test.py
tests/core/terastal/: omen_test.py  repos_test.py  terastal_test.py  teratype_test.py
tests/usecase/: cursor_test.py  hp_test.py  selection_test.py  team_test.py  terastal_test.py
(+22 files in other folders)
